fix: this fix bug where "Your account has been restored successfully"… (#63)
* fix: this fix bug where  "Your account has been restored successfully" pop up isn't shown after restoring account

* fix: this removes restore message modal window duplication

* refactor: add invisible email field on account creation page

* style: change flag icon padding

* style: change search field input bg color

* feat: this add redirect logic if user is not registred

* fix: this add fixes of bugs

--- a/src/components/Fields/ImageField/ImageField.module.scss
+++ b/src/components/Fields/ImageField/ImageField.module.scss
@@ -20,7 +20,7 @@
   }
 
   &__button {
-    @apply w-full  min-h-[44px] flex justify-center items-center gap-[14px] rounded-lg border bg-grey-1030 border-[#F79400] transition-all duration-150;
+    @apply w-full  min-h-[44px] flex justify-center items-center gap-[14px] rounded-lg border bg-[#fefefe] border-[#F79400] transition-all duration-150;
   }
 
   &__icon-btn {
